--- a/OracleJETApplication/templates/profile/schedules-timecards/current-week-modal/current-week-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/current-week-modal/current-week-modal-large.tmpl.html
@@ -5,18 +5,7 @@
         </span>
     </div>
     <div class="oj-dialog-body">
-
-                       <div data-bind="click:function(){alert($parent.selectedSchedule.currentDayEnd);}">hello</div>   
-  
-
-        <div data-bind="text:$parent.selectedSchedule.currentDayEnd"></div>
-
- 
-
-                       
-                       
-             
-                      
-         
+<!--        <div data-bind="click:function(){console.log($parent.selectedSchedule);}">hello</div>-->
+        <div data-bind="text: $parent.selectedSchedule"></div>
     </div>
 </div>
