--- a/OracleJETApplication/templates/profile/payroll/payroll-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/payroll/payroll-large.tmpl.html
@@ -53,7 +53,7 @@
                 <div class="oj-col oj-md-12">INS Expiration Date</div>
                 <div class="oj-col oj-md-12">
 <!--                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />-->
-                        <div data-bind="text: $parent.insexpirationdate()"></div>
+                        <div data-bind="text: $parent.insexpirationdateFormatted()"></div>
                 </div>
             </div>
             <div class="oj-col oj-md-12 oj-lg-4">
@@ -111,8 +111,7 @@
             <div class="oj-col oj-md-3 oj-lg-2">
                 <div class="oj-col">Expiration Date</div>
                 <div class="oj-col">
-    <!--                <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
-                    <div data-bind="text: $parent.bi9documentexpiration"></div>
+                    <div data-bind="text: $parent.bi9documentexpirationFormatted"></div>
                 </div>
             </div>
             <div class="oj-col oj-md-6 oj-lg-4">
@@ -159,8 +158,7 @@
         <div class="oj-col oj-md-3 oj-lg-2">
             <div class="oj-col">Expiration Date</div>
             <div class="oj-col">
-<!--                <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
-                <div data-bind="text: $parent.ci9documentexpiration"></div>
+                <div data-bind="text: $parent.ci9documentexpirationFormatted"></div>
             </div>
         </div>
         <div class="oj-col oj-md-6 oj-lg-4">
@@ -180,11 +178,8 @@
     <hr class="oj-col oj-md-12" />
     <div class="oj-col oj-md-12">
         <div class="oj-col oj-md-12 oj-lg-12">
-            <span class="oj-choice-row">
-<!--              <input id="temp" type="checkbox" value: $parent.agecertification>-->
-<span data-bind="visible: $parent.agecertification() == 1"><i class="fa fa-check"></i></span>
-              <label>Age Certification</label>
-            </span>
+               <span data-bind="visible: $parent.agecertification() == 1"><i class="fa fa-check"></i></span>
+                <label for="agree"><strong>Age Certification</strong></label>
         </div>
         <div class="oj-col oj-md-4 oj-lg-4">
 
@@ -197,7 +192,7 @@
             <div class="oj-col oj-md-12 oj-lg-12">Expiration Date</div>
             <div class="oj-col oj-md-12 oj-lg-12">
 <!--                <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
-                <div data-bind="text: $parent.certificationexpiration"></div>
+                <div data-bind="text: $parent.certificationexpirationFormatted"></div>
             </div>
         </div>
         <div class="oj-col oj-md-12 oj-lg-4">
@@ -216,11 +211,8 @@
     <hr class="oj-col oj-md-12" />
         <div class="oj-col oj-md-12">
             <div class="oj-col oj-md-12 oj-lg-12">
-               <span class="oj-choice-row">
-<!--                 <input id="temp" type="checkbox" value="agecertification">-->
                  <span data-bind="visible: $parent.workpermit() == 1"><i class="fa fa-check"></i></span>
                  <label>Work Permit</label>
-               </span>
            </div>
            <div class="oj-col oj-md-4 oj-lg-4">
 
@@ -233,7 +225,7 @@
                <div class="oj-col oj-md-12 oj-lg-12">Expiration Date</div>
                <div class="oj-col oj-md-12 oj-lg-12">
 <!--                   <input data-bind="ojComponent: {component: 'ojInputDate', value: $parent.reHireDate}" />-->
-                    <div data-bind="text: $parent.workpermitexpiration"></div>
+                    <div data-bind="text: $parent.workpermitexpirationFormatted"></div>
                </div>
            </div>
            <div class="oj-col oj-md-4 oj-lg-4">
