added input for uploaded image fields

--- a/OracleJETApplication/templates/partials/employee-payroll-edit-modal/employee-payroll-edit-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-payroll-edit-modal/employee-payroll-edit-modal-large.tmpl.html
@@ -130,7 +130,7 @@
             <div class="oj-col oj-md-4">
                 <div class="oj-col oj-md-12">Upload Document Image</div>
                 <div class="oj-col oj-md-8">
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />
+                     <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.bi9documentupload}" />
                 </div>
                 <div class="oj-col oj-md-4">
                     <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton',
@@ -175,7 +175,7 @@
             <div class="oj-col oj-md-4">
                 <div class="oj-col oj-md-12">Upload Document Image</div>
                 <div class="oj-col oj-md-8">
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />
+                     <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.ci9documentupload}" />
                 </div>
                 <div class="oj-col oj-md-4">
                     <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton',
@@ -215,7 +215,7 @@
             <div class="oj-col oj-md-4">
                 <div class="oj-col oj-md-12">Upload Document Image</div>
                 <div class="oj-col oj-md-8">
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />
+                     <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.agecertupload}" />
                 </div>
                 <div class="oj-col oj-md-4">
                     <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton',
@@ -256,7 +256,7 @@
             <div class="oj-col oj-md-4">
                 <div class="oj-col oj-md-12">Upload Document Image</div>
                 <div class="oj-col oj-md-8">
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />
+                    <input data-bind="ojComponent: {component: 'ojInputText', value: $parent.workpermitupload}" />
                 </div>
                 <div class="oj-col oj-md-4">
                     <button id="buttonIcon2" data-bind="ojComponent: {component:'ojButton',
