--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
@@ -91,12 +91,43 @@
     <div class="oj-row">
             <div class="oj-md-4 oj-col">
                 <h3>Availablity</h3>
+                    <div class="oj-sm-12">
+                        <h4>Minimum - Maximum Hours by Day</h4>
+                        <div data-bind="foreach: $parent.availability">
+                            <div>
+                                <span data-bind="text: day "></span> (<span data-bind="text: hoursavailablefrom"></span><span data-bind="visible: hoursavailableto > 0"><span data-bind="text: ' - ' + hoursavailableto"></span></span>)
+                            </div>
+                        </div>
+                    </div>
             </div>
             <div class="oj-md-4 oj-col">
                 <h3>Days and Times</h3>
+                       <h4>Unavailable</h4>
+                        <div data-bind="foreach: $parent.unavailable">
+                            <div>
+                                <span data-bind="text: day"></span>
+                                <span data-bind="visible: allday == 1">all day</span>
+                                <span data-bind="visible: allday == 0">
+                                    <span data-bind="text: starttime"></span> - <span data-bind="text: endtime"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <h4>Preferred</h4>
+                        <div data-bind="foreach: $parent.preferred">
+                            <div>
+                                <span data-bind="text: day"></span>
+                                <span data-bind="visible: allday == 1">all day</span>
+                                <span data-bind="visible: allday == 0">
+                                    <span data-bind="text: starttime"></span> - <span data-bind="text: endtime"></span>
+                                </span>
+                            </div>
+                        </div>
             </div>
             <div class="oj-md-4 oj-col">
                 <h3>School District</h3>
+                    <div>
+                        <div data-bind="text: $parent.schooldistrict"></div>
+                    </div>
             </div>  
     </div>
 <div data-bind="template: {name: 'profile/schedules-timecards/current-week-modal/current-week-modal-large'}"></div>
